desktop/deploy/connect-gateway-http_route-example.yaml
# cilium-gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cilium-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: web
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backend-route
spec:
  parentRefs:
    - name: cilium-gateway
      sectionName: web
  hostnames:
    - "my-app.com" # 域名或gateway IP
    - "192.168.3.103" # gateway IP
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: my-app-backend
          port: 4001

# curl -X POST 'http://192.168.3.103/greet.v1.GreetService/SubmitAuth' \
#  --header 'Content-Type: application/json' \
#  --data-raw '{
#    "username": "admin",
#    "password": "password",
#    "authRequestId": "123"
#  }'
